# CodingProjectPractice

./: README.md  pyproject.toml
.github/workflows/: python-app.yml  python-test.yml
numberProblems/py_find_pi_n/tests/: test_app.py
src/codingprojectpractice/: find_e.py  find_pi.py
tests/: test_e.py  test_pi.py
