[project]
name = "codingprojectpractice"
version = "0.1.0"
description = ""
authors = [
    {name = "David DH Nguyen",email = "51886638+daviddhnguyen@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"